--- a/branch/Makefile
+++ b/branch/Makefile
@@ -1,7 +1,9 @@
 EXEC = test
 
+BUILD_DIR = ./build
+
 SRC = $(EXEC).s $(EXEC).c
 LINKSCRIPT = $(EXEC).ld
-GDBINIT = ../gdbinit
+GDBINIT = gdbinit
 
 include ../rule.mk
