add printf module to project

--- a/first/Makefile
+++ b/first/Makefile
@@ -11,5 +11,6 @@ GDBINIT = ../gdbinit
 CFLAGS += -Idrivers/chip/lm3s811/inc -Idrivers/CMSIS/Include
 
 include drivers/chip/lm3s811/module.mk
+include kernel/service/module.mk
 
 include ../rule.mk
