add stdlib option

--- a/first/Makefile
+++ b/first/Makefile
@@ -8,7 +8,8 @@ SRC += ./app/$(EXEC).c
 
 LINKSCRIPT = ./app/$(EXEC).ld
 GDBINIT = ../gdbinit
-CFLAGS += -Idrivers/chip/lm3s811/inc -Idrivers/CMSIS/Include
+
+include ./feature.mk
 
 include drivers/chip/lm3s811/module.mk
 include kernel/service/module.mk
