--- a/arithmetic/Makefile
+++ b/arithmetic/Makefile
@@ -5,5 +5,7 @@ BUILD_DIR = ./build
 SRC = $(EXEC).s 
 LINKSCRIPT = $(EXEC).ld
 GDBINIT = ../gdbinit
+#use stdlib
+NOSTDLIB_ENABLE = y
 
 include ../rule.mk
