--- a/branch/Makefile
+++ b/branch/Makefile
@@ -5,5 +5,7 @@ BUILD_DIR = ./build
 SRC = $(EXEC).s $(EXEC).c
 LINKSCRIPT = $(EXEC).ld
 GDBINIT = gdbinit
+#use stdlib
+NOSTDLIB_ENABLE = y
 
 include ../rule.mk
