change project dir

--- a/main/Makefile
+++ b/main/Makefile
@@ -1,19 +1,27 @@
-EXEC = test
+PROJS = lm3s811/main 
 
-SOURCE_DIR = .
-BUILD_DIR = ./build
-
-SRC += ./app/$(EXEC).s 
-SRC += ./app/$(EXEC).c
-
-LINKSCRIPT = ./app/$(EXEC).ld
-GDBINIT = gdbinit
-CFLAGS += -Idrivers/chip/lm3s811/inc 
-CFLAGS += -Idrivers/CMSIS/Include
-
-include ./feature.mk
-
-include drivers/chip/lm3s811/module.mk
-include kernel/service/module.mk
-
-include ../rule.mk
+# 一般情况下，linux是有 LANG这个环境变量 而window没有的，所有通过  ifeq ($(LANG),)  是否为空即可判断操作系统。
+# windows情况下，一般情况是要用cl.exe 编译的，所以要用if 之下 else之上的块。
+# 但是，不一般的情况，比如装个matlab，系统会增加环境变量Lang ，于是， gmake all出错了。
+# 判断方法  echo %LANG%   解决方案： set LANG=  (只在当前cmd窗口有效)  
+ifneq ($(LANG),)
+#linux
+.DEFAULT_GOAL := all
+all :
+	@echo "begin compile ALL exercises for assembly samples in linux......................."
+	@for proj in $(PROJS); do $(MAKE) -C ./project/$$proj/GCC || exit "$$?"; done
+	@echo "compile ALL exercises finished successfully! ......"
+.PHONY : clean
+clean:
+	@for proj in $(PROJS); do $(MAKE) -C ./project/$$proj/GCC clean|| exit "$$?"; done
+else
+#windows
+.DEFAULT_GOAL := all
+all :
+	@echo "begin compile ALL exercises for assembly samples in windows......................."
+	@for %%proj in ($(PROJS)) do $(MAKE) -C ./project/%%proj/GCC || exit "$$?"
+	@echo "compile ALL exercises finished successfully! ......"
+.PHONY : clean
+clean:
+	@for %%proj in ($(PROJS)) do $(MAKE) -C ./project/%%proj/GCC clean|| exit "$$?"
+endif
