--- a/test/arithmetic/Makefile
+++ b/test/arithmetic/Makefile
@@ -8,4 +8,8 @@ GDBINIT = ../../gdbinit
 #use stdlib
 NOSTDLIB_ENABLE = y
 
+CFLAGS += -march=armv7-m 
+CFLAGS += -mcpu=cortex-m3
+CFLAGS += -mfloat-abi=soft
+
 include ../../rule.mk
