--- a/test/mov/Makefile
+++ b/test/mov/Makefile
@@ -6,4 +6,8 @@ GDBINIT = ../../gdbinit
 #use stdlib
 NOSTDLIB_ENABLE = y
 
+CFLAGS += -march=armv7-m 
+CFLAGS += -mcpu=cortex-m3
+CFLAGS += -mfloat-abi=soft
+
 include ../../rule.mk
