--- a/test/template/Makefile
+++ b/test/template/Makefile
@@ -13,4 +13,6 @@ CFLAGS += -march=armv7-m
 CFLAGS += -mcpu=cortex-m3
 CFLAGS += -mfloat-abi=soft
 
+QFLAGS += -machine lm3s811evb
+
 include ../../rule.mk
