--- a/test/branch/Makefile
+++ b/test/branch/Makefile
@@ -12,4 +12,6 @@ CFLAGS += -march=armv7-m
 CFLAGS += -mcpu=cortex-m3
 CFLAGS += -mfloat-abi=soft
 
+QFLAGS += -machine lm3s811evb
+
 include ../../rule.mk
