change build way

--- a/main/project/lm3s811/main/GCC/Makefile
+++ b/main/project/lm3s811/main/GCC/Makefile
@@ -1,16 +1,18 @@
-EXEC = test
+EXEC = main
 
 SOURCE_DIR = ../../../..
-SDK_PATH = $(abspath $(PWD)/$(SOURCE_DIR))
 
 PWD = $(shell pwd)
+SDK_PATH = $(abspath $(shell pwd))/$(SOURCE_DIR)
 
 BUILD_DIR = $(SOURCE_DIR)/build/$(CHIP_COFNIG)
 
-SRC += $(EXEC).s 
-SRC += ../$(EXEC).c
+APP_PATH=project/$(CHIP_COFNIG)/$(EXEC)
 
-LINKSCRIPT = $(EXEC).ld
+ASM_SRC = $(APP_PATH)/GCC/test.s 
+SRC = $(APP_PATH)/test.c
+
+LINKSCRIPT = test.ld
 GDBINIT = $(SOURCE_DIR)/project/$(CHIP_COFNIG)/main/GCC/gdbinit
 CFLAGS += -I$(SOURCE_DIR)/drivers/chip/$(CHIP_COFNIG)/inc 
 CFLAGS += -I$(SOURCE_DIR)/drivers/CMSIS/Include
