--- a/main/project/stm32f4xx/main/GCC/Makefile
+++ b/main/project/stm32f4xx/main/GCC/Makefile
@@ -1,21 +1,25 @@
 EXEC = main
 
+
 SOURCE_DIR = ../../../..
-SDK_PATH = $(abspath $(PWD)/$(SOURCE_DIR))
 
-PWD = $(shell pwd)
+SDK_PATH = $(abspath $(shell pwd))/$(SOURCE_DIR)
 
-BUILD_DIR = $(SOURCE_DIR)/build/$(CHIP_COFNIG)
+# SDK_PATH = $(abspath $(PWD)/$(SOURCE_DIR))
+BUILD_DIR = $(SDK_PATH)/build/$(CHIP_COFNIG)
 
-SRC += startup_stm32f401xe.s 
-SRC += ../src/main.c
-SRC += ../src/serial.c
-SRC += ../src/steper.c
-SRC += ../src/stm32f4xx_hal_msp.c
-SRC += ../src/stm32f4xx_it.c
-SRC += ../src/syscalls.c
-SRC += ../src/system_stm32f4xx.c
-SRC += ../src/hal_log.c
+APP_PATH=project/$(CHIP_COFNIG)/$(EXEC)
+
+ASM_SRC += $(APP_PATH)/GCC/startup_stm32f401xe.s 
+
+SRC += $(APP_PATH)/src/main.c
+SRC += $(APP_PATH)/src/serial.c
+SRC += $(APP_PATH)/src/steper.c
+SRC += $(APP_PATH)/src/stm32f4xx_hal_msp.c
+SRC += $(APP_PATH)/src/stm32f4xx_it.c
+SRC += $(APP_PATH)/src/syscalls.c
+SRC += $(APP_PATH)/src/system_stm32f4xx.c
+SRC += $(APP_PATH)/src/hal_log.c
 
 LINKSCRIPT = $(SOURCE_DIR)/project/$(CHIP_COFNIG)/main/GCC/nucleo.ld
 
