Revert "add exception module"
This reverts commit 00c94242a0d9b46d445f0b086eae6717a5ca9132.

--- a/main/project/stm32f4xx/main/GCC/config/dbg_cfg.cfg
+++ b/main/project/stm32f4xx/main/GCC/config/dbg_cfg.cfg
@@ -5,9 +5,9 @@ transport select hla_swd
 source [find target/stm32f4x.cfg]
 
 
-# $_TARGETNAME configure -event gdb-detach {
-#     shutdown
-# }
+$_TARGETNAME configure -event gdb-detach {
+    shutdown
+}
 
 reset_config srst_only
 
