Revert "change template but run fail"
This reverts commit 5cd35c5e39318ef477c18276cdf1c1bbf0d98fcf.

--- a/test/template/Makefile
+++ b/test/template/Makefile
@@ -1,18 +1,9 @@
-EXEC = main
+EXEC = test
 
+BUILD_DIR = ./build
 
-SOURCE_DIR = ../..
-
-SDK_PATH = $(abspath $(shell pwd))/$(SOURCE_DIR)
-
-APP_PATH=test/template
-
-BUILD_DIR=./build
-
-ASM_SRC = $(APP_PATH)/test.s 
-SRC = $(APP_PATH)/main.c
-
-LINKSCRIPT = test.ld
+SRC = $(EXEC).s $(EXEC).c
+LINKSCRIPT = $(EXEC).ld
 GDBINIT = gdbinit
 
 #use stdlib
