--- a/test/arithmetic/Makefile
+++ b/test/arithmetic/Makefile
@@ -2,9 +2,9 @@ EXEC = test
 
 BUILD_DIR = ./build
 
-SRC = $(EXEC).s 
+ASMSRC = $(EXEC).s 
 LINKSCRIPT = $(EXEC).ld
-GDBINIT = ../../gdbinit
+GDBINIT = ../gdbinit
 #use stdlib
 NOSTDLIB_ENABLE = y
 
@@ -12,4 +12,4 @@ CFLAGS += -march=armv7-m
 CFLAGS += -mcpu=cortex-m3
 CFLAGS += -mfloat-abi=soft
 
-include ../../rule.mk
+include ../rule.mk
