--- a/test/branch/Makefile
+++ b/test/branch/Makefile
@@ -2,9 +2,10 @@ EXEC = test
 
 BUILD_DIR = ./build
 
-SRC = $(EXEC).s $(EXEC).c
+ASMSRC = $(EXEC).s 
+SRC = $(EXEC).c
 LINKSCRIPT = $(EXEC).ld
-GDBINIT = gdbinit
+GDBINIT = ../dbinit
 #use stdlib
 NOSTDLIB_ENABLE = y
 
@@ -14,4 +15,4 @@ CFLAGS += -mfloat-abi=soft
 
 QFLAGS += -machine lm3s811evb
 
-include ../../rule.mk
+include ../rule.mk
