--- a/main/project/stm32f4xx/main/GCC/Makefile
+++ b/main/project/stm32f4xx/main/GCC/Makefile
@@ -1,29 +1,28 @@
 EXEC = main
 
-SOURCE_DIR = ../../../..
-SDK_PATH = $(abspath $(PWD)/$(SOURCE_DIR))
+SDKPATH ?= ../../../..
 
-PWD = $(shell pwd)
+BUILD_DIR = $(SDKPATH)/build/$(CHIP_COFNIG)
 
-BUILD_DIR = $(SOURCE_DIR)/build/$(CHIP_COFNIG)
+APP_DIR=project/$(CHIP_COFNIG)/main
 
-ASMSRC += startup_stm32f401xe.s 
-SRC += ../src/main.c
-SRC += ../src/serial.c
-SRC += ../src/steper.c
-SRC += ../src/stm32f4xx_hal_msp.c
-SRC += ../src/stm32f4xx_it.c
-SRC += ../src/syscalls.c
-SRC += ../src/system_stm32f4xx.c
-SRC += ../src/hal_log.c
+ASMSRC += $(APP_DIR)/GCC/startup_stm32f401xe.s 
+SRC += $(APP_DIR)/src/main.c
+SRC += $(APP_DIR)/src/serial.c
+SRC += $(APP_DIR)/src/steper.c
+SRC += $(APP_DIR)/src/stm32f4xx_hal_msp.c
+SRC += $(APP_DIR)/src/stm32f4xx_it.c
+SRC += $(APP_DIR)/src/syscalls.c
+SRC += $(APP_DIR)/src/system_stm32f4xx.c
+SRC += $(APP_DIR)/src/hal_log.c
 
-LINKSCRIPT = $(SOURCE_DIR)/project/$(CHIP_COFNIG)/main/GCC/nucleo.ld
+LINKSCRIPT = $(SDKPATH)/project/$(CHIP_COFNIG)/main/GCC/nucleo.ld
 
-GDBINIT = $(SOURCE_DIR)/project/$(CHIP_COFNIG)/main/GCC/gdbinit
-CFLAGS += -I$(SOURCE_DIR)/drivers/chip/$(CHIP_COFNIG)/inc 
-CFLAGS += -I$(SOURCE_DIR)/drivers/CMSIS/Include
-CFLAGS += -I$(SOURCE_DIR)/drivers/CMSIS/Device/ST/STM32F4xx/Include
-CFLAGS += -I$(SOURCE_DIR)/project/$(CHIP_COFNIG)/main/inc
+GDBINIT = $(SDKPATH)/project/$(CHIP_COFNIG)/main/GCC/gdbinit
+CFLAGS += -I$(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/inc 
+CFLAGS += -I$(SDKPATH)/drivers/CMSIS/Include
+CFLAGS += -I$(SDKPATH)/drivers/CMSIS/Device/ST/STM32F4xx/Include
+CFLAGS += -I$(SDKPATH)/project/$(CHIP_COFNIG)/main/inc
 
 # CFLAGS += -march=armv7-m 
 CFLAGS += -mcpu=cortex-m4
@@ -33,7 +32,7 @@ CFLAGS += -mcpu=cortex-m4
 include ./feature.mk
 
 
-include $(SOURCE_DIR)/drivers/chip/$(CHIP_COFNIG)/module.mk
-include $(SOURCE_DIR)/kernel/service/module.mk
+include $(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/module.mk
+include $(SDKPATH)/kernel/service/module.mk
 
-include $(SOURCE_DIR)/rule.mk
+include $(SDKPATH)/rule.mk
