--- a/main/Makefile
+++ b/main/Makefile
@@ -1,9 +1,6 @@
 PROJS = lm3s811/main \
 		stm32f4xx/main \
 		stm32l5xx/main 
-# SDKPATH = $(abspath $(shell pwd))
-SDKPATH=J:/document/doc/src/os/toyos/src/gnu/clion-stm32/arm_asm/main
-
 
 # 一般情况下，linux是有 LANG这个环境变量 而window没有的，所有通过  ifeq ($(LANG),)  是否为空即可判断操作系统。
 # windows情况下，一般情况是要用cl.exe 编译的，所以要用if 之下 else之上的块。
@@ -11,6 +8,7 @@ SDKPATH=J:/document/doc/src/os/toyos/src/gnu/clion-stm32/arm_asm/main
 # 判断方法  echo %LANG%   解决方案： set LANG=  (只在当前cmd窗口有效)  
 ifneq ($(LANG),)
 #linux
+SDKPATH = $(abspath $(shell pwd))
 .DEFAULT_GOAL := all
 all :
 	@echo "begin compile ALL exercises for assembly samples in linux......................."
@@ -21,6 +19,7 @@ clean:
 	@for proj in $(PROJS); do $(MAKE) SDKPATH=$(SDKPATH) -C ./project/$$proj/GCC clean|| exit "$$?"; done
 else
 #windows
+SDKPATH=J:/document/doc/src/os/toyos/src/gnu/clion-stm32/arm_asm/main
 .DEFAULT_GOAL := all
 all :
 	@echo "begin compile ALL exercises for assembly samples in windows......................."
