--- a/main/project/lm3s811/main/GCC/Makefile
+++ b/main/project/lm3s811/main/GCC/Makefile
@@ -1,14 +1,20 @@
-EXEC = test
+EXEC = main
+
 SDKPATH ?= ../../../..
-BUILD_DIR = $(SDKPATH)/build/$(CHIP_COFNIG)
 
-APP_DIR=project/$(CHIP_COFNIG)/main
+BUILD_DIR = $(SDKPATH)/build/$(CHIP_COFNIG)/$(EXEC)
 
-ASMSRC += $(APP_DIR)/GCC/$(EXEC).s 
-SRC += $(APP_DIR)/$(EXEC).c
+APP_DIR=project/$(CHIP_COFNIG)/$(EXEC)
 
-LINKSCRIPT = $(EXEC).ld
-GDBINIT = $(SDKPATH)/project/$(CHIP_COFNIG)/main/GCC/gdbinit
+include ./feature.mk
+include $(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/module.mk
+include $(SDKPATH)/kernel/service/module.mk
+
+ASMSRC += $(APP_DIR)/GCC/test.s 
+SRC += $(APP_DIR)/test.c
+
+LINKSCRIPT = test.ld
+GDBINIT = $(SDKPATH)/project/$(CHIP_COFNIG)/$(EXEC)/GCC/gdbinit
 CFLAGS += -I$(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/inc 
 CFLAGS += -I$(SDKPATH)/drivers/CMSIS/Include
 
@@ -18,9 +24,5 @@ CFLAGS += -mfloat-abi=soft
 
 QFLAGS += -machine lm3s811evb
 
-include ./feature.mk
-
-include $(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/module.mk
-include $(SDKPATH)/kernel/service/module.mk
 
 include $(SDKPATH)/rule.mk
