uart ok / interrupt ok

--- a/test/cm4/Makefile
+++ b/test/cm4/Makefile
@@ -2,7 +2,8 @@ EXEC = test
 
 BUILD_DIR=./build
 
-ASMSRC = $(EXEC).s 
+SRC = $(EXEC).c
+ASMSRC = start.s 
 LINKSCRIPT = $(EXEC).ld
 GDBINIT = ../gdbinit
 #use stdlib
