stm32l5 printf ok from lpuart1

--- a/main/project/stm32l5xx/main/GCC/config/program.cfg
+++ b/main/project/stm32l5xx/main/GCC/config/program.cfg
@@ -10,6 +10,6 @@ init
 halt
 poll
 flash probe 0
-flash write_image erase ../../../../build/stm32l5xx/main.elf 0x0000000 elf
+flash write_image erase ../../../../build/stm32l5xx/main/main.elf 0x0000000 elf
 reset run
 shutdown
