add unit test  for mt_ringbuffer

--- a/main/middleware/mt_ringbuffer/Makefile
+++ b/main/middleware/mt_ringbuffer/Makefile
@@ -1,6 +1,15 @@
+CFLAGS += -I../../kernel/service/lite_printf
+CFLAGS += -I../../kernel/third/unit-test/cutest/
+CFLAGS += -Wno-unused-function
+CFLAGS += -Wno-unused-but-set-variable
+CFLAGS += -Wno-unused-variable
+
+SRC += ../../kernel/third/unit-test/cutest/CuTest.c
+SRC += mt_ringbuffer.c 
+SRC += test.c
 
 all:
-	gcc -g -Wall -std=gnu99 mt_ringbuffer.c test.c -o rbtest 
+	gcc $(CFLAGS) -g -Wall -std=gnu99 $(SRC) -o rbtest  
 .PHONY:
 clean:
 	rm rbtest
