--- a/main/middleware/multi_core_sim/Makefile
+++ b/main/middleware/multi_core_sim/Makefile
@@ -7,6 +7,8 @@ CFLAGS += -ggdb3
 SRC += ../mt_ringbuffer/mt_ringbuffer.c
 SRC += ./mc.c
 SRC += ./sim_uart.c
+SRC += ./serial.c
+SRC += ./ser_bridge.c
 # SRC += ./test_cpu_cores.c
 all:
 	gcc $(CFLAGS) $(SRC) -lrt -pthread -o mc
