--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@
 .gdb_history
 tools/qemu/win/w64-202107062
 tools/arm-none-eabi/Sourcery_CodeBench_Lite_for_ARM_EABI
+**/*.asm
+**/*.hex
+main/**/*.exe
+**/CSerialPort
+**/cutest
+**/CmBacktrace
+**/early-bringup-tool
+**/*gdb_history
