--- a/main/project/stm32f4xx/main/GCC/Makefile
+++ b/main/project/stm32f4xx/main/GCC/Makefile
@@ -9,6 +9,7 @@ APP_DIR=project/$(CHIP_COFNIG)/$(EXEC)
 include ./feature.mk
 include $(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/module.mk
 include $(SDKPATH)/kernel/service/module.mk
+include $(SDKPATH)/middleware/module.mk
 
 ASMSRC += $(APP_DIR)/GCC/startup_stm32f401xe.s 
 SRC += $(APP_DIR)/src/main.c
