--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,20 +12,26 @@
             "servertype": "openocd",
             "configFiles": [
                 "interface/stlink.cfg",
-                // "target/stm32f4x.cfg"
-                "target/stm32l5x.cfg"
+                "target/stm32f4x.cfg"
+                // "target/stm32l5x.cfg"
             ],
             "interface": "swd",
-            "executable": ".\\main\\build\\stm32l5xx\\main\\main.elf",
+            "executable": ".\\main\\build\\stm32f4xx\\FreeRTOS_demo\\FreeRTOS_demo.elf",
             // "executable": ".\\main\\build\\stm32f4xx\\main\\main.elf",
-            // "executable": ".\\main\\build\\stm32f4xx\\FreeRTOS_demo\\FreeRTOS_demo.elf",
+            "svdFile": ".\\main\\drivers\\CMSIS\\SVD\\STM32F401xE.svd",
+            "device": "STM32F401RE",
+
+            // "executable": ".\\main\\build\\stm32l5xx\\main\\main.elf",
+            // "svdFile": ".\\main\\drivers\\CMSIS\\SVD\\STM32L552.svd",
+            // "device": "STM32F552ZE",
             "runToMain": false,
-            "svdFile": ".\\main\\drivers\\CMSIS\\SVD\\STM32L552.svd",
-            // "svdFile": ".\\main\\drivers\\CMSIS\\SVD\\STM32F401xE.svd",
-            // "device": "STM32F401RE",
-            "device": "STM32F552ZE",
+            
+            
+            // "showDevDebugOutput": "parsed",
             "preLaunchCommands": [
-                "dir D:/src/os/toyos/src/gnu/clion-stm32/arm_asm/main/project/stm32l5xx/main/GCC"
+                // "dir D:/src/os/myos/arm_asm/main/project/stm32l5xx/main/GCC"
+                // "dir D:/src/os/myos/arm_asm/main/project/stm32f4xx/main/GCC"
+                "dir D:/src/os/myos/arm_asm/main/project/stm32f4xx/FreeRTOS_demo/GCC"
             ]
             
         }
