--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 .gdb_history
 tools/qemu/win/w64-202107062
 tools/arm-none-eabi/Sourcery_CodeBench_Lite_for_ARM_EABI
+tools/xpack/xpack-arm-none-eabi-gcc-10.2.1-1.1-win32-x64
+tools/xpack/xpack-windows-build-tools-4.2.1-2-win32-x64
 **/*.asm
 **/*.hex
 **/*.pyc
