--- a/main/project/stm32f4xx/main/GCC/Makefile
+++ b/main/project/stm32f4xx/main/GCC/Makefile
@@ -8,19 +8,20 @@ APP_DIR=project/$(CHIP_COFNIG)/$(EXEC)
 
 include ./feature.mk
 include $(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/module.mk
-include $(SDKPATH)/kernel/service/module.mk
+include $(SDKPATH)/kernel/module.mk
 include $(SDKPATH)/middleware/module.mk
-include $(SDKPATH)/project/stm32f4xx/main/serial_cmd/module.mk
+# include $(SDKPATH)/project/stm32f4xx/main/serial_cmd/module.mk
 
 ASMSRC += $(APP_DIR)/GCC/startup_stm32f401xe.s 
 SRC += $(APP_DIR)/src/main.c
-SRC += $(APP_DIR)/src/uart_dma.c
-SRC += $(APP_DIR)/src/serial.c
-SRC += $(APP_DIR)/src/stepper_motor.c
 SRC += $(APP_DIR)/src/stm32f4xx_hal_msp.c
 SRC += $(APP_DIR)/src/stm32f4xx_it.c
 SRC += $(APP_DIR)/src/syscalls.c
 SRC += $(APP_DIR)/src/system_stm32f4xx.c
+
+SRC += $(APP_DIR)/src/uart_dma.c
+SRC += $(APP_DIR)/src/serial.c
+SRC += $(APP_DIR)/src/stepper_motor.c
 SRC += $(APP_DIR)/src/hal_log.c
 
 LINKSCRIPT = $(SDKPATH)/project/$(CHIP_COFNIG)/$(EXEC)/GCC/nucleo.ld
