--- a/main/project/stm32f4xx/FreeRTOS_demo/GCC/Makefile
+++ b/main/project/stm32f4xx/FreeRTOS_demo/GCC/Makefile
@@ -1,6 +1,8 @@
 EXEC = FreeRTOS_demo
 
 SDKPATH ?= ../../../..
+# SDKPATH := $(abspath $(SDKPATH))
+$(info SDKPATH = $(SDKPATH))
 
 BUILD_DIR = $(SDKPATH)/build/$(CHIP_COFNIG)/$(EXEC)
 
@@ -8,7 +10,7 @@ APP_DIR=project/$(CHIP_COFNIG)/$(EXEC)
 
 include ./feature.mk
 include $(SDKPATH)/drivers/chip/$(CHIP_COFNIG)/module.mk
-include $(SDKPATH)/kernel/service/module.mk
+include $(SDKPATH)/kernel/module.mk
 include $(SDKPATH)/middleware/module.mk
 
 include $(SDKPATH)/kernel/rtos/freertos/FreeRTOS-Kernel/module.mk
@@ -20,6 +22,11 @@ SRC += $(APP_DIR)/src/stm32f4xx_hal_msp.c
 SRC += $(APP_DIR)/src/stm32f4xx_it.c
 SRC += $(APP_DIR)/src/syscalls.c
 SRC += $(APP_DIR)/src/system_stm32f4xx.c
+
+SRC += $(APP_DIR)/src/uart_dma.c
+SRC += $(APP_DIR)/src/serial.c
+SRC += $(APP_DIR)/src/stepper_motor.c
+SRC += $(APP_DIR)/src/hal_log.c
 
 LINKSCRIPT = $(SDKPATH)/project/$(CHIP_COFNIG)/$(EXEC)/GCC/nucleo.ld
 
