--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,7 @@
     "riscv-venus.variableFormat": "hex",
     "cortex-debug.registerUseNaturalFormat": false,
     "cortex-debug.variableUseNaturalFormat": false,
-    "C_Cpp.errorSquiggles": "Disabled",
+    "C_Cpp.errorSquiggles": "disabled",
     "cortex-debug.showRTOS": true,
     "cortex-debug.gdbPath.windows": "${workspaceRoot}\\tools\\toolchain\\gcc-arm-none-eabi-10-2020-q4-major\\bin\\arm-none-eabi-gdb.exe",
     "cortex-debug.openocdPath.windows": "${workspaceRoot}\\tools\\openocd\\OpenOCD-20210519-0.11.0\\bin\\openocd.exe"
