Add support for building all projects and CMake support for lm3s811 and stm32f10x projects
This commit adds several important features and improvements:

1. Build all projects functionality:
   - Added build_all_projects() function to build.py
   - Updated main() function to handle all as board parameter
   - Updated documentation with usage examples

2. CMake support for new boards:
   - Added LM3S811 support in modules.cmake
   - Added STM32F10x Standard Peripheral Library support
   - Created CMakeLists.txt for lm3s811/main
   - Created CMakeLists.txt for stm32f10x/dc-uart

3. New project files:
   - main/project/lm3s811/main/hal.h
   - main/project/lm3s811/main/serial.h
   - main/project/stm32f10x/dc-uart/inc/stm32f1xx_hal_conf.h

4. Documentation updates:
   - Updated BUILD_SCRIPT_README.md with new features
   - Added build all projects examples
   - Updated build system requirements

5. Build system improvements:
   - Per-project CMake configuration directories
   - Improved error handling and user feedback
   - Ninja build system integration

These changes enable users to build all projects at once with a single command, while also adding support for new hardware platforms.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -42,11 +42,32 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "Toolchain: ${CMAKE_C_COMPILER}")
 
-# Build all projects
-add_subdirectory(project/stm32f4xx/main)
-add_subdirectory(project/stm32f4xx/FreeRTOS_demo)
-add_subdirectory(project/stm32f4xx/NetduinoPlus2)
-add_subdirectory(project/stm32l5xx/main)
+# Build specific project based on BUILD_PROJECT variable
+if(DEFINED BUILD_PROJECT)
+    if(BUILD_PROJECT STREQUAL "stm32f4xx/main")
+        add_subdirectory(project/stm32f4xx/main)
+    elseif(BUILD_PROJECT STREQUAL "stm32f4xx/FreeRTOS_demo")
+        add_subdirectory(project/stm32f4xx/FreeRTOS_demo)
+    elseif(BUILD_PROJECT STREQUAL "stm32f4xx/NetduinoPlus2")
+        add_subdirectory(project/stm32f4xx/NetduinoPlus2)
+    elseif(BUILD_PROJECT STREQUAL "stm32l5xx/main")
+        add_subdirectory(project/stm32l5xx/main)
+    elseif(BUILD_PROJECT STREQUAL "stm32f10x/dc-uart")
+        add_subdirectory(project/stm32f10x/dc-uart)
+    elseif(BUILD_PROJECT STREQUAL "lm3s811/main")
+        add_subdirectory(project/lm3s811/main)
+    else()
+        message(WARNING "Unknown project: ${BUILD_PROJECT}")
+    endif()
+else()
+    # Build all projects
+    add_subdirectory(project/stm32f10x/dc-uart)
+    add_subdirectory(project/lm3s811/main)
+    add_subdirectory(project/stm32f4xx/main)
+    add_subdirectory(project/stm32f4xx/FreeRTOS_demo)
+    add_subdirectory(project/stm32f4xx/NetduinoPlus2)
+    add_subdirectory(project/stm32l5xx/main)
+endif()
 
 # Print build summary
 message(STATUS "========================================")
